fix alignment

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -56,11 +56,11 @@ html, body, .background, .board {
 
 .tiles-set_overlay:nth-of-type(5) {
     top: 47%;
-    left: 46%;
+    left: 46.5%;
 }
 
 .tile {
-    height: 9vh;
+    height: 11vh;
     width: 7vh;
     display: inline-block;
 }
